--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,15 +21,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'me.relex:circleindicator:1.2.2@aar'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.google.zxing:core:3.2.1'
@@ -44,6 +43,9 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.android.support:support-v4:25.1.1'
-    compile files('libs/YouTubeAndroidPlayerApi.jar')
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.roomorama:caldroid:3.0.1'
     testCompile 'junit:junit:4.12'
+    compile files('libs/caldroid-3.0.1-javadoc.jar')
+    compile files('libs/caldroid-3.0.1-sources.jar')
 }
